[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/DialogueBox.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Comfortaa.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/UI/Marker.png" type="Texture" id=3]
[ext_resource path="res://UI/DialogBox.gd" type="Script" id=4]
[ext_resource path="res://Assets/SFX/NextDialog.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 868, 105 ), Vector2( 868, 130 ) ]
}

[node name="DialogBox" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -466.0
margin_top = -180.0
margin_right = 466.0
margin_bottom = -25.9998
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = 2081.0
margin_bottom = 280.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.564706, 0.360784, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marker" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 868, 110.158 )
scale = Vector2( 10, 10 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/Marker"]
autoplay = "Idle"
anims/Idle = SubResource( 1 )

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="NextDialog" type="AudioStreamPlayer" parent="DialogBox"]
stream = ExtResource( 5 )
volume_db = 5.0
[connection signal="tween_all_completed" from="DialogBox/Tween" to="." method="_on_Tween_tween_all_completed"]
